# xet-core

./: .gitignore  README.md  deny.toml
gitxet/: Cargo.toml
gitxet/src/test_utils/: create_csv_file.rs  create_file.rs
gitxet/src/xetmnt/: main.rs
gitxet/tests/: cli_tests.rs  git_repo_xet_tests.rs  integration_tests.rs  test_git_xet.rs
gitxet/tests/integration_tests/: initialize.sh  test_basic_forking.sh  test_git_version_check.sh  test_git_xet_init.sh  test_gitattributes_writing.sh  test_global_config_independent_install.sh  test_local_cas_env.sh  test_repo_migration.sh  test_stored_notes.sh
gitxet/tests/upgrade_consistency_tests/: repo_upgrade_validation_create.sh  run_test.sh  setup_run_environment.sh
libxet/: .gitignore  Cargo.toml
libxet/src/: lib.rs
rust/: Cargo.lock2  Cargo.toml
rust/cache/: Cargo.toml
rust/cache/src/: block.rs  disk.rs  error.rs  interface.rs  lib.rs  lru.rs  metrics.rs  util.rs  xorb_cache.rs
rust/cas_client/: Cargo.toml  Dockerfile  README.md
rust/cas_client/src/: caching_client.rs  cas_connection_pool.rs  client_adapter.rs  data_transport.rs  error.rs  grpc.rs  interface.rs  lib.rs  local_client.rs  passthrough_staging_client.rs  remote_client.rs  staging_client.rs  staging_trait.rs  util.rs
rust/cas_types/: Cargo.toml
rust/cas_types/src/: compression_scheme.rs  data_ops.rs  lib.rs  shard_ops.rs
rust/chunkpipe/: Cargo.toml
rust/chunkpipe/src/: lib.rs
rust/common_constants/: Cargo.toml
rust/common_constants/src/: lib.rs
rust/data_analysis/: Cargo.toml  build.rs
rust/data_analysis/src/: analyzer_trait.rs  histogram_float.rs  histogram_int.rs  lib.rs  sketches.rs  sketches_bridge.rs  space_saving_bridge.cpp  space_saving_bridge.hpp
rust/dsfs/: Cargo.toml
rust/dsfs/src/: lib.rs  web_worker_fs.rs
rust/error_printer/: Cargo.toml
rust/error_printer/src/: lib.rs
rust/file_operations/: Cargo.toml
rust/file_operations/src/: error.rs  mod.rs
rust/file_utils/: Cargo.toml
rust/file_utils/src/: file_metadata.rs  lib.rs  privilege_context.rs  safe_file_creator.rs
rust/gitxet/: Cargo.toml  LICENSE.rtf  build.rs
rust/gitxet/tests/: cli_tests.rs  git_repo_xet_tests.rs  integration_tests.rs  test_git_xet.rs
rust/gitxetcore/: Cargo.toml
rust/gitxetcore/src/: async_file_iterator.rs  async_iterator_with_putback.rs  axe.rs  cas_plumb.rs  checkout.rs  command.rs  config_cmd.rs  constants.rs  data_processing.rs  data_processing_v1.rs  data_processing_v2.rs  diff.rs  errors.rs  gitxet_entry.rs  lib.rs  log.rs  merkledb_plumb.rs  merkledb_shard_plumb.rs  small_file_determination.rs  smudge_query_interface.rs  standalone_pointer.rs  summaries_plumb.rs  upgrade_checks.rs  user.rs  utils.rs
rust/lazy/: Cargo.toml
rust/lazy/src/: error.rs  lazy_config.rs  lazy_pathlist_config.rs  lazy_rule.rs  lazy_rule_config.rs  lib.rs
rust/libmagic/: Cargo.toml
rust/libmagic/src/: file_types.rs  lib.rs  libmagic.rs
rust/mdb_shard/: Cargo.toml
rust/mdb_shard/src/: cas_structs.rs  chunk_dedup_hash_map.rs  constants.rs  error.rs  file_structs.rs  intershard_reference_structs.rs  lib.rs  merging.rs  serialization_utils.rs  session_directory.rs  set_operations.rs  shard_benchmark.rs  shard_dedup_probe.rs  shard_file.rs  shard_file_handle.rs  shard_file_manager.rs  shard_file_reconstructor.rs  shard_format.rs  shard_handle.rs  shard_in_memory.rs  shard_version.rs  utils.rs
rust/merkledb/: Cargo.toml
rust/merkledb/benches/: rolling_hash_benchmark.rs
rust/merkledb/fuzz-mdb/: Cargo.toml  fuzz.sh
rust/merkledb/fuzz-target/: Cargo.toml
rust/merkledb/src/: aggregate_hashes.rs  async_chunk_iterator.rs  chunk_iterator.rs  constants.rs  error.rs  internal_methods.rs  lib.rs  merkledb_debug.rs  merkledb_highlevel_v1.rs  merkledb_highlevel_v2.rs  merkledb_ingestion_v1.rs  merkledb_reconstruction.rs  merkledbbase.rs  merkledbv1.rs  merkledbv2.rs  merklememdb.rs  merklenode.rs  tests.rs
rust/merklehash/: Cargo.toml
rust/merklehash/src/: data_hash.rs  lib.rs
rust/parutils/: Cargo.toml
rust/parutils/src/: async_iterator.rs  buffered_async_iterator.rs  lib.rs  memory_limit.rs  parallel_utils.rs
rust/pointer_file/: Cargo.toml
rust/pointer_file/fuzz/: Cargo.toml
rust/pointer_file/src/: lib.rs
rust/progress_reporting/: Cargo.toml
rust/progress_reporting/src/: data_progress.rs  lib.rs  main.rs  writer_with_reporting.rs
rust/prometheus_dict_encoder/: Cargo.toml
rust/prometheus_dict_encoder/src/: lib.rs
rust/query_cache/: Cargo.toml
rust/query_cache/src/: lib.rs
rust/retry_strategy/: Cargo.toml
rust/retry_strategy/src/: lib.rs
rust/s3/: Cargo.toml
rust/s3/src/: client.rs  errors.rs  lib.rs  utils.rs
rust/shard_client/: Cargo.toml
rust/shard_client/src/: error.rs  global_dedup_table.rs  lib.rs  local_shard_client.rs  shard_client.rs
rust/tableau_summary/: Cargo.toml
rust/tableau_summary/src/: foo.json  lib.rs  xml.rs
rust/tableau_summary/tests/: twb_test.rs
rust/thiserror/: Cargo.toml
rust/thiserror/_git/: packed-refs
rust/thiserror/impl/: Cargo.toml
rust/thiserror/src/: lib.rs
rust/thiserror/tests/: test_generics.rs
rust/utils/: Cargo.toml  README.md  build.rs
rust/utils/examples/: infra.rs
rust/utils/proto/: alb.proto  cas.proto  common.proto  infra.proto  shard.proto
rust/utils/src/: compression.rs  consistenthash.rs  constants.rs  errors.rs  gitbaretools.rs  key.rs  lib.rs  output_bytes.rs  safeio.rs  singleflight.rs  version.rs
rust/wasm/: Cargo.toml  Makefile  index.html  index.js  worker.js
rust/wasm/lib/: lib.mjs  worker.mjs
rust/wasm/src/: lib.rs
rust/xet_config/: Cargo.toml
rust/xet_error/: Cargo.toml  README.md  build.rs
rust/xetblob/: Cargo.toml  README.md
rust/xetfs/: Cargo.toml
xetldfs/: Cargo.toml
xetldfs/benches/: bench_fs.rs  setup.rs
xetldfs/src/: filter.rs  interposing_linux.rs  interposing_osx.rs  lib.rs  path_utils.rs  repo_path_utils.rs  reporting.rs  runtime.rs  stat_interposing.rs  tokio_runtime.rs  utils.rs  xet_interface.rs  xet_repo_wrapper.rs  xet_rfile.rs  xetio.rs
xetldfs/tests/: basic_read_tests.rs  integration_tests.rs
(+376 files in other folders)
