[package]
name = "gitxet"
version = "0.13.4"
edition = "2021"
resolver = "2"

[[bin]]
name = "git-xet"
path = "src/bin/gitxet.rs"

[[bin]]
name = "xetmnt"
path = "src/xetmnt/main.rs"

[[bin]]
name = "xettest_create_file"
path = "src/test_utils/create_file.rs"

[[bin]]
name = "xettest_create_csv"
path = "src/test_utils/create_csv_file.rs"


[dependencies]
tokio = { version = "1.36", features = ["full"] }
libxet = { path = "../libxet/" }
clap = { version = "3.1.6", features = ["derive"] }
rand = "0.8"
md5 = "0.7"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
rstest = "0.11"
tokio-test = "0.4.2"
mockstream = "0.0.3"
tempfile = "3"
run_script = "0.9.0"
tracing = "0.1.*"
anyhow = "1"
regex = "1.5.6"
itertools = "0.12.1"

[profile.release]
opt-level = 3
lto = true
debug = "line-tables-only"

[profile.rdev]
inherits = "release"
opt-level = 3
lto = false
debug = "full"

[profile.opt-test]
inherits = "dev"
opt-level = 1
debug = 1

[features]
openssl_vendored = ["libxet/openssl_vendored"]
