[package]
name = "gitxet"
version = "0.14.5"
edition = "2021"
resolver = "2"

[[bin]]
name = "git-xet"
path = "src/bin/gitxet.rs"

[[bin]]
name = "xetmnt"
path = "src/xetmnt/main.rs"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
libxet = { path = "../libxet/" }
clap = { version = "3.1.6", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
rstest = "0.11"
tokio-test = "0.4.2"
mockstream = "0.0.3"
tempfile = "3"
run_script = "0.9.0"
tracing = "0.1.*"
anyhow = "1"
regex = "1.5.6"

[profile.release]
opt-level = 3
lto = true
debug = "line-tables-only"

[profile.rdev]
inherits = "release"
opt-level = 3
lto = false
debug = "full"

[profile.opt-test]
inherits = "dev"
opt-level = 1
debug = 1

[features]
openssl_vendored = ["libxet/openssl_vendored"]
