[package]
name = "libxet"
version = "0.14.2"
edition = "2021"

[dependencies]
gitxetcore = { path = "../rust/gitxetcore" }
merkledb = { path = "../rust/merkledb" }
progress_reporting = { path = "../rust/progress_reporting" }
error_printer = { path = "../rust/error_printer" }

[features]
openssl_vendored = ["gitxetcore/openssl_vendored"]

[profile.release]
opt-level = 3
lto = true
debug = "line-tables-only"

[profile.rdev]
inherits = "release"
opt-level = 3
lto = false
debug = "full"

[profile.opt-test]
inherits = "dev"
opt-level = 1
debug = 1
