[workspace]

resolver = "2"

members = [
    "libmagic",
    "cache",
    "common_constants",
    "merklehash",
    "merkledb",
    "mdb_shard",
    "pointer_file",
    "retry_strategy",
    "gitxetcore",
    "gitxet",
    "data_analysis",
    "parutils",
    "prometheus_dict_encoder",
    "shard_client",
    "progress_reporting",
    "cas_client",
    "xet_error",
    "xet_config",
    "xetblob",
    "lazy",
    "error_printer",
]


[profile.release]
opt-level = 3
lto = true
debug = 1

[profile.ci-test]
inherits = "dev"
opt-level = 1
debug = 1
