[workspace]
rust-version = "1.79"

resolver = "2"

members = [
    "cache",
    "common_constants",
    "merklehash",
    "merkledb",
    "mdb_shard",
    "pointer_file",
    "gitxetcore",
    "parutils",
    "prometheus_dict_encoder",
    "shard_client",
    "cas_client",
    "xet_error",
    "xet_config",
    "xetblob",
    "error_printer", "dsfs", "xetfs",
]

exclude = ["wasm"]

[profile.release]
opt-level = 3
lto = true
debug = 1

[profile.opt-test]
inherits = "dev"
opt-level = 1
debug = 1
