[package]
name = "cache"
version = "0.14.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils" }
tokio = { version = "1.36", features = ["full"] }
async-trait = "0.1.9"
base64 = "0.13.0"
lru = "0.12"
xet_error = { path = "../xet_error" }
anyhow = "1"
tracing = "0.1.31"
tracing-attributes = "0.1"
tracing-futures = "0.2"
tracing-test = "0.2.1"
tracing-subscriber = { version = "0.3", features = ["json", "tracing-log"] }
mockall = "0.11"
chrono = "0.4"
tempfile = "3.2.0"
byteorder = "1.4.3"
# metrics
lazy_static = "1.4.0"
prometheus = "0.13.0"

[dev-dependencies]
tempdir = "0.3.7"
rand = "0.8.5"
test-context = "0.1.3"
merklehash = { path = "../merklehash" }

[features]
strict = []
