[package]
name = "cas_client"
version = "0.14.0"
edition = "2021"

[features]
strict = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common_constants = {path = "../common_constants"}
error_printer = {path = "../error_printer"}
utils = {path = "../utils"}
merkledb = {path = "../merkledb"}
merklehash = { path = "../merklehash" } 
parutils = {path = "../parutils"}
retry_strategy = {path = "../retry_strategy"}
tonic = {version = "0.10.2", features = ["tls", "tls-roots", "transport"] }
prost = "0.12.3"
tokio = { version = "1.36", features = ["full"] }
tokio-retry = "0.3.0"
tower = {version = "0.4"}
clap = "2.33"
async-trait = "0.1.9"
anyhow = "1"
http = "0.2.5"
xet_error = {path = "../xet_error"}
tempfile = "3"
cache = {path = "../cache"}
deadpool = {version = "0.9.4", features = ["managed", "rt_tokio_1"] }
futures = {version = "0.3", default-features = false, features = ["alloc"]}
tracing = "0.1.31"
bincode = "1.3.3"
uuid = {version = "1", features = ["v4", "fast-rng"]}
lazy_static = "1.4.0"
# trace-propagation
opentelemetry = { version = "0.17", features = ["trace", "rt-tokio"] }
opentelemetry-jaeger = { version = "0.16", features = ["rt-tokio"] }
opentelemetry-http = "0.6.0"
tracing-opentelemetry = "0.17.2"
progress_reporting = {path = "../progress_reporting"}
serde_json = "1.0"
hyper = { version = "1.1.0", features = ["client", "http2"] }
hyper-util = { version = "0.1.2", features = ["http2", "tokio", "client"] }
http-body-util = "0.1.0"
tokio-native-tls = "0.3.1"
bytes = "1"
itertools = "0.10"
tokio-rustls = "0.25.0"
rustls-pemfile = "2.0.0"
hyper-rustls = { version = "0.26.0", features = ["http2"] }
lz4 = "1.24.0"

[dev-dependencies]
trait-set = "0.3.0"
lazy_static = "1.4.0"
tokio-stream = { version = "0.1", features = ["net"] }
rcgen = "0.12.0"
