[package]
name = "cas_client"
version = "0.14.5"
edition = "2021"

[features]
strict = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dsfs = { path = "../dsfs" }
common_constants = { path = "../common_constants" }
cas_types = { path = "../cas_types" }
error_printer = { path = "../error_printer" }
utils = { path = "../utils" }
merkledb = { path = "../merkledb" }
merklehash = { path = "../merklehash" }
parutils = { path = "../parutils" }
retry_strategy = { path = "../retry_strategy" }
tower = { version = "0.4" }
clap = "2.33"
async-trait = "0.1.9"
anyhow = "1"
http = "0.2.5"
xet_error = { path = "../xet_error" }
tempfile = "3"
cache = { path = "../cache" }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
tracing = "0.1.31"
bincode = "1.3.3"
uuid = { version = "1", features = ["v4", "fast-rng"] }
lazy_static = "1.4.0"
# trace-propagation
# opentelemetry = { version = "0.17", features = ["trace"] }
# opentelemetry-jaeger = { version = "0.16" }
# opentelemetry-http = "0.6.0"
# tracing-opentelemetry = "0.17.2"
serde_json = "1.0"
bytes = "1"
itertools = "0.10"
lz4_flex = "0.11"
# reqwest = { path = "../../../../reqwest" }
reqwest = { version = "0.12.7" }
url = "2.5.2"
serde = "1.0.208"

[dev-dependencies]
trait-set = "0.3.0"
lazy_static = "1.4.0"
rcgen = "0.12.0"
