[package]
name = "data_analysis"
version = "0.11.5"
edition = "2021"
description = "Single-pass algorithms to analyze (potentially large) data"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = "1.0.72"
serde = {version = "1.0.142", features = ["derive"] }
float-cmp = "0.9.0"
approx = "0.5.1"
truncrate = "0.1.3"

[build-dependencies]
cxx-build = "1.0"

[dev-dependencies]
rand = "0.8.4"
anyhow = "1"

[features]
strict = []
