[package]
name = "error_printer"
version = "0.14.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tracing = "0.1.40"

[target.'cfg(target_family = "wasm")'.dependencies]
web-sys = { version = "0.3.70", features = ["console"] }

[lib]
crate-type = ["cdylib", "rlib"]
