[package]
name = "gitxet"
version = "0.11.3"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
debug = 1

[[bin]]
name = "git-xet"
path = "src/bin/gitxet.rs"

[[bin]]
name = "xetmnt"
path = "src/xetmnt/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
gitxetcore = { path = "../gitxetcore"}
clap = { version = "4.4.0", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0.3"
rstest = "0.18.2"
tokio-test = "0.4.2"
mockstream = "0.0.3"
tempfile = "3"
run_script = "0.10.1"
tracing = "0.1.*"
anyhow = "1"
regex = "1.5.6"
