[package]
name = "gitxetcore"
version = "0.12.6"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
debug = 1

[lib]
doctest = false


[dependencies]
cas_client = { path = "../cas_client"}
xet_config = {path = "../xet_config"}
merkledb = {path = "../merkledb"}
merklehash = { path = "../merklehash"} 
mdb_shard = {path = "../mdb_shard"}
shard_client = {path = "../shard_client"}
utils = {path = "../utils"}
parutils = {path = "../parutils"}
pointer_file = {path = "../pointer_file"}
progress_reporting = {path = "../progress_reporting"}
s3 = {path = "../s3"}
lazy = {path = "../lazy"}
slog = "2.4.1"
slog-async = "2.3.0"
slog-json = "2.2.0"
dirs = "4.0.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
hex = "0.4.3"
thiserror = "1.0.30"
tracing = "0.1.*"
more-asserts = "0.3.*"
futures = "0.3.28"
futures-core = "0.3.28"
pbr = "1.0.4"
async-trait = "0.1.53"
tracing-attributes = "0.1"
tracing-subscriber = {version = "0.3", features = ["tracing-log"]}
clap = { version = "3.1.6", features = ["derive"] }
git2 = "0.14.4"
base64 = "0.13.0"
fallible-iterator = "0.2.0"
atoi = "1.0.0"
colored = "2.0.0"
pathdiff = "0.2.1"
http = "0.2.8"
same-file = "1.0.6"
tempfile = "3.2.0"
regex = "1.5.6"
lazy_static = "1.4.0"
is_executable = "1.0.1"
rand = "0.8.4"
version-compare = "0.1.1"
serde = {version = "1.0.142", features = ["derive"] }
serde_json = "1.0.83"
csv-core = "0.1.10"
data_analysis = { path = "../data_analysis" }
libmagic = {path = "../libmagic"}
sorted-vec = "0.8.0"
bincode = "1.3.3"
enum_dispatch = "0.3.8"
lru = "0.7.8"
intaglio = "1.8.0, <1.9.0"
walkdir = "2"
filetime = "0.2"
ctrlc = "3"
nfsserve = "0.10"
atty = "0.2"
libc = "0.2"
itertools = "0.10.5"
snailquote = "0.3.1"
ring = "0.16.20"
humantime = "2.1.0"
toml = "0.5"
winapi = { version = "0.3", features = ["winerror", "winnt", "handleapi", "processthreadsapi", "securitybaseapi"] }
normalize-path = "0.1.0"
git-version = "0.3"
const_format="0.2"

# tracing
tracing-futures = "0.2"
tracing-test = "0.2.1"
tracing-opentelemetry = "0.17.2"
opentelemetry = { version = "0.17", features = ["trace", "rt-tokio"] }
opentelemetry-jaeger = { version = "0.16", features = ["rt-tokio"] }

# analytics
url = "2.3"
mockall = "0.11"
mockall_double = "0.3"

# axe
sysinfo = "0.26.6"
serde_with = "1.6.1"
chrono = {version = "0.4.19", features = ["serde"] }

 
# metrics
prometheus = "0.13.0"
prometheus_dict_encoder = { path = "../prometheus_dict_encoder" }
utime = "0.3.1"


# use embedded webpki root certs for MacOS as native certs take a very long time
# to load, which affects startup time significantly
[target.'cfg(macos)'.dependencies]
reqwest = {version = "0.11.4", features = ["json", "webpki-roots"]}

[target.'cfg(not(macos))'.dependencies]
reqwest = {version = "0.11.4", features = ["json"]}

# needed to support cross-compilation on linux/mac
[target.'cfg(not(windows))'.dependencies]
openssl = { version = "0.10.38", features = ["vendored"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
rstest = "0.11"
tokio-test = "0.4.2"
mockstream = "0.0.3"
tempfile = "3"
run_script = "0.9.0"
serial_test = "2.0.0"

[features]
strict = []
expensive_tests = []
