[package]
name = "lazy"
version = "0.12.8"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = {path = "../thiserror"}
tracing = "0.1.*"
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4.0"

[dev-dependencies]
tempfile = "3"