[package]
name = "lazy"
version = "0.14.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xet_error = { path = "../xet_error" }
tracing = "0.1.*"
tokio = { version = "1.39.3", features = ["sync", "macros", "io-util", "rt", "time"] }
lazy_static = "1.4.0"

[dev-dependencies]
tempfile = "3"
