[package]
name = "libmagic"
version = "0.11.0"
edition = "2021"

[lib]
doctest = false

[profile.release]
opt-level = 3
lto = true
debug = 1

[dependencies]
anyhow = "1"
serde = {version = "1.0.142", features = ["derive"] }
serde_json = "1.0.83"
tracing = "0.1.*"
tracing-attributes = "0.1"
tracing-subscriber = {version = "0.3", features = ["tracing-log"]}

[target.'cfg(not(target_os = "windows"))'.dependencies]
magic = "0.13"
file = {path = "../deps/file"}
