[package]
name = "libmagic"
version = "0.11.1"
edition = "2021"

[lib]
doctest = false

[profile.release]
opt-level = 3
lto = true
debug = 1

[dependencies]
anyhow = "1"
phf = { version = "0.11", features = ["macros"] }
serde = {version = "1.0.142", features = ["derive"] }
serde_json = "1.0.83"
tracing = "0.1.*"
tracing-attributes = "0.1"
tracing-subscriber = {version = "0.3", features = ["tracing-log"]}