[package]
name = "mdb_shard"
version = "0.14.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
more-asserts = "0.3.*"
tempdir = "0.3.7"
merkledb = {path = "../merkledb"}
merklehash = { path = "../merklehash" }
serde = {version="1.0.129", features = ["derive"]}
tokio = { version = "1.36", features = ["full"] }
lazy_static = "1.4.0"
regex = "1.5"
tracing = "0.1.*"
uuid = {version = "1.3.2", features = ["v4"]}
async-scoped = {version = "0.7", features = ["use-tokio"]}
binary-heap-plus = "0.5.0"
tempfile = "3.2.0"
clap = { version = "3.1.6", features = ["derive"] }
anyhow = "1"
rand = {version = "0.8.5", features = ["small_rng"]}
xet_error = {path = "../xet_error"}
async-trait = "0.1.9"

[[bin]]
name = "shard_benchmark"
path = "src/shard_benchmark.rs"
