[package]
name = "merklehash"
version = "0.14.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = "0.8.4"
rand_core = "0.6.3"
rand_chacha = "0.3.1"
structopt = "0.3.22"
sha3 = "0.9.1"
blake3 = "1.5.1"
generic-array = "0.14.4"
safe-transmute = "0.11.2"
serde = { version = "1.0.129", features = ["derive"] }
#heed = "0.11"
getrandom = { version = "0.2.15" }

[features]
strict = []
default = []
wasm = ["getrandom/js"]
