[package]
name = "parutils"
version = "0.14.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tokio = { version = "1.39.3", features = ["sync", "macros", "io-util", "rt", "time"] }
anyhow = "1"
#async-scoped = { version = "0.7", features = ["use-tokio"] }
futures = "0.3.28"
async-trait = "0.1.53"
#deadqueue = "0.2.4"
tracing = "0.1.31"
more-asserts = "0.3.*"
len-trait = "0.6.1"

[dev-dependencies]
tokio = { version = "1.39.3", features = ["rt-multi-thread"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1.36", features = ["sync", "macros", "io-util", "rt", "time"], default-features = false }
getrandom = { version = "0.2.15", features = ["js"] }

[features]
strict = []
