[package]
name = "pointer_file"
version = "0.13.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"
tracing = "0.1.31"
merklehash = {path = "../merklehash"}
gitxetcore = {path = "../gitxetcore"}

[features]
strict = []