[package]
name = "pointer_file"
version = "0.14.5"
edition = "2021"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"
tracing = "0.1.31"
merklehash = {path = "../merklehash"}
gitxetcore = {path = "../gitxetcore"}

[features]
strict = []
