[package]
name = "progress_reporting"
version = "0.11.3"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "test_progress_reporting"
path = "src/main.rs"


[dependencies]
crossterm = "0.25.0"
tokio = {version = "1.17.0", features = ["sync"] }
utils = {path = "../utils"}
tracing = "0.1.*"
more-asserts = "0.2.2"
atty = "0.2"


