[package]
name = "query_cache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.83"
toml = "0.5"
tokio = { version = "1.36", features = ["full"] }
chrono = { version = "0.4.19", features = ["serde"] }
