[package]
name = "s3"
version = "0.12.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parutils = {path = "../parutils"}
tracing = "0.1.*"
rusoto_s3 = "0.47.0"
rusoto_core = "0.47.0"
url = "2.3.1"
pbr = "1.0.4"
tokio = { version = "1", features = ["full"] }
tokio-retry = "0.3.0"
thiserror = "1.0.30"
chrono = "0.4.22"
more-asserts = "0.3.*"
