[package]
name = "shard_client"
version = "0.12.0"
edition = "2021"

[features]
strict = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = {path = "../utils"}
merklehash = {path = "../merklehash"}
retry_strategy = {path = "../retry_strategy"}
tonic = {version = "0.6", features = ["tls", "tls-roots", "transport"] }
prost = "0.9"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "sync"] }
tokio-retry = "0.3.0"
tower = {version = "0.4"}
clap = "2.33"
async-trait = "0.1.9"
anyhow = "1"
http = "0.2.5"
thiserror = "1.0.30"
tempfile = "3"
tracing = "0.1.31"
bincode = "1.3.3"
uuid = {version = "1", features = ["v4", "fast-rng"]}
lazy_static = "1.4.0"
# trace-propagation
opentelemetry = { version = "0.17", features = ["trace", "rt-tokio"] }
opentelemetry-jaeger = { version = "0.16", features = ["rt-tokio"] }
opentelemetry-http = "0.6.0"
tracing-opentelemetry = "0.17.2"
progress_reporting = {path = "../progress_reporting"}
cas_client = {path = "../cas_client"}
serde_json = "1.0"
mdb_shard = {path = "../mdb_shard"}

# HTTP2 GET AND POST support
h2 = "0.3.13"
hyper = "0.14.18"
bytes = "1"
itertools = "0.10"

