[package]
name = "shard_client"
version = "0.14.5"
edition = "2021"

[features]
strict = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils" }
merklehash = { path = "../merklehash" }
retry_strategy = { path = "../retry_strategy" }
prost = "0.12.3"
tower = { version = "0.4" }
clap = "2.33"
async-trait = "0.1.9"
anyhow = "1"
http = "0.2.5"
xet_error = { path = "../xet_error" }
tempfile = "3"
tracing = "0.1.31"
bincode = "1.3.3"
uuid = { version = "1", features = ["v4", "fast-rng"] }
lazy_static = "1.4.0"
cas_client = { path = "../cas_client" }
cas_types = { path = "../cas_types" }
serde_json = "1.0"
mdb_shard = { path = "../mdb_shard" }
merkledb = { path = "../merkledb" }

# trace-propagation
opentelemetry = { version = "0.17", features = ["trace", "rt-tokio"] }
opentelemetry-jaeger = { version = "0.16", features = ["rt-tokio"] }
opentelemetry-http = "0.6.0"
tracing-opentelemetry = "0.17.2"


# HTTP2 GET AND POST support
bytes = "1"
itertools = "0.10"

[dev-dependencies]
rand = "0.8.5"
