[package]
name = "tableau_summary"
version = "0.13.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error_printer = {path = "../error_printer"}
roxmltree = "0.19.0"
anyhow = "1.0.79"
serde = {version = "1.0.142", features = ["derive"] }
serde_json = "1.0.83"
itertools = "0.12.1"
tracing = "0.1.40"

[dev-dependencies]
tracing-subscriber = "0.3.18"
