[package]
name = "tableau_summary"
version = "0.14.2"
edition = "2021"

[dependencies]
error_printer = {path = "../error_printer"}
roxmltree = "0.19.0"
anyhow = "1.0.79"
serde = {version = "1.0.142", features = ["derive"] }
serde_json = "1.0.83"
itertools = "0.12.1"
tracing = "0.1.40"
regex = "1.10.3"
once_cell = "1.19.0"
url = "2.5.0"
imara-diff = "0.1.5"

[dev-dependencies]
tracing-subscriber = "0.3.18"
