[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.92"
web-sys = { version = "0.3.70", features = [
  "FileList",
  "HtmlInputElement",
  "Window",
  "Document",
  "FileReader",
  "File",
  "console",
] }
wasm-bindgen-futures = "0.4.43"
console_error_panic_hook = "0.1.7"
gitxetcore = { path = "../gitxetcore" }
tempfile = "3.10.1"
getrandom = { version = "0.2.15", features = ["js"] }
dsfs = { path = "../dsfs" }
